# spaces

./: .gitignore  0.checkout.spaces.star  1.checkout.spaces.star  API.md  CHANGES.md  Cargo.toml  Cargo.workspace.toml  DEVELOPER.md  DOCS.md  LICENSE  MIGRATING.md  README.md  default.rust-toolchain.toml  musl.rust-toolchain.toml  preload.spaces.star  rust-toolchain.toml  spaces.star  test-hash-data.txt  version.spaces.json
.cargo/: config.toml
.github/workflows/: build-and-publish.yaml  build.yaml  pre-merge.yaml  spaces-action.yaml
crates/changes/: Cargo.toml
crates/changes/src/: glob.rs  lib.rs
crates/copy/: Cargo.toml
crates/copy/src/: lib.rs
crates/environment/: Cargo.toml
crates/environment/src/: lib.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/http-archive/: Cargo.toml
crates/http-archive/src/: gh.rs  lib.rs  oras.rs
crates/inputs/: Cargo.toml
crates/lock/: Cargo.toml
crates/lock/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/rule/: Cargo.toml
crates/rule/src/: lib.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
crates/spaces/: Cargo.toml
crates/spaces-archiver/: .gitignore  Cargo.toml
crates/spaces-archiver/src/: decoder.rs  driver.rs  encoder.rs  lib.rs
crates/spaces-console/: Cargo.toml
crates/spaces-console/src/: components.rs  file.rs  lib.rs  null.rs  process.rs  pty.rs  secrets.rs  super_console.rs  typography.rs  ui.rs  verbosity.rs  writer.rs
crates/spaces-console/src/bootstrap/: components.rs  container.rs  mod.rs  span.rs  typography.rs
crates/spaces-platform/: Cargo.toml
crates/spaces-utils/: Cargo.toml
crates/spaces-utils/src/: age.rs  bin_detail.rs  ci.rs  co.rs  copy.rs  deps.rs  ecode.rs  environment.rs  features.rs  fs_mutex.rs  git.rs  graph.rs  hash_streaming.rs  inputs.rs  inspect.rs  labels.rs  lib.rs  lock.rs  logger.rs  logs.rs  markdown.rs  marker.rs  mcache.rs  mtarget.rs  placeholder.rs  platform.rs  query.rs  rcache.rs  rule.rs  sandbox.rs  search.rs  shell.rs  store.rs  suggest.rs  targets.rs  version.rs  workflows.rs  ws.rs
crates/spaces-utils/src/changes/: glob.rs  mod.rs
crates/spaces-utils/src/http_archive/: gh.rs  mod.rs
crates/spaces-utils/src/version/: config.rs  manifest.rs  mod.rs
crates/spaces/src/: about.rs  arguments.rs  builtins.rs  co.rs  completions.rs  docs.rs  environment.rs  evaluation_profile.rs  evaluator.rs  executor.rs  info.rs  inputs.rs  label.rs  ledger.rs  lsp_context.rs  main.rs  prelude.rs  rule.rs  rules.rs  runner.rs  script.rs  singleton.rs  stardoc.rs  state_lock.rs  sync.rs  task.rs  tools.rs  workspace.rs
crates/spaces/src/assets/prelude/: info.star  semver.star
crates/spaces/src/assets/prelude/exec/: args.star  env.star  fs.star  hash.star  io.star  json.star  log.star  path.star  process.star  sh.star  string.star  sys.star  text.star  time.star  tmp.star  toml.star  yaml.star
crates/spaces/src/assets/prelude/rules/: asset.star  checkout.star  deps.star  env.star  glob.star  rules.star  run.star  shortcut.star  visibility.star  ws.star
crates/spaces/src/builtins/: checkout.rs  eval_context.rs  info.rs  log.rs  rlog.rs  run.rs  semver.rs  workspace.rs
crates/spaces/src/executor/: archive.rs  asset.rs  capsule.rs  env.rs  exec.rs  git.rs  http_archive.rs  oras.rs
crates/spaces/src/rules/: checkout.rs  inputs.rs  io.rs  run.rs
crates/spaces/src/tools/: cargo-binstall.json  gh.json  oras.json
crates/starstd/: Cargo.toml
crates/starstd/src/: args.rs  env.rs  fs.rs  hash.rs  io.rs  json.rs  lib.rs  log.rs  path.rs  process.rs  process_error.rs  script.rs  sh.rs  string.rs  sys.rs  text.rs  time.rs  tmp.rs  toml.rs  yaml.rs
crates/state_lock/: Cargo.toml
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/suggest/: Cargo.toml
crates/workflows/: Cargo.toml
crates/ws/: Cargo.toml
crates/ws/src/: lib.rs
docs/: README.md  version.spaces.toml
docs/co-spaces-toml/: packages.co.spaces.toml  release.co.spaces.toml  spaces.co.spaces.toml
scripts/: icons.exec.star  run-all.exec.star  show-all-errors.exec.star  summarize-evaluation-profile.exec.star
scripts/demo/: args-demo.exec.star  process-demo.exec.star
scripts/errors/: README.md  error-args-invalid-option-kind.exec.star  error-fs-copy-directory-without-recursive.exec.star  error-fs-invalid-chmod-spec.exec.star  error-fs-missing-path.exec.star  error-hash-invalid-base64.exec.star  error-io-invalid-max-lines.exec.star  error-io-unsupported-encoding.exec.star  error-json-indent-out-of-range.exec.star  error-log-invalid-format.exec.star  error-log-invalid-level.exec.star  error-process-check-nonzero.exec.star  error-process-invalid-stdout-mode.exec.star  error-process-timeout.exec.star  error-process-unknown-handle.exec.star  error-process-unsupported-signal.exec.star  error-sh-check-nonzero.exec.star  error-string-empty-fill.exec.star  error-string-invalid-regex.exec.star  error-text-invalid-line-range.exec.star  error-text-invalid-render-format.exec.star  error-time-invalid-timer-handle.exec.star  error-time-parse-failure.exec.star  error-tmp-unknown-path.exec.star  error-toml-null-value.exec.star  error-yaml-bad-input.exec.star
scripts/test/: test-args.exec.star  test-env.exec.star  test-fs.exec.star  test-hash.exec.star  test-io.exec.star  test-json.exec.star  test-log.exec.star  test-path.exec.star  test-process.exec.star  test-sh.exec.star  test-string.exec.star  test-sys.exec.star  test-text-diagnostic.exec.star  test-text.exec.star  test-time.exec.star  test-tmp.exec.star  test-toml.exec.star  test-yaml.exec.star
skills/: spaces-dev.md
skills/create-spaces-pr/: SKILL.md
src/: action.rs  archive.rs  arguments.rs  config.rs  context.rs  git.rs  ledger.rs  main.rs  manifest.rs  platform.rs  template.rs  workspace.rs
test_data/: checkout.star  read_toml.star  spaces.star  spaces_cargo.toml  spaces_deploy.star
test_data/workflows/: spaces.star  spaces_develop.toml  spaces_develop_legacy.toml
(+4 files in other folders)
