[workspace]
resolver = "2"
members = [
    "crates/spaces",
    "crates/graph",
    "crates/git",
    "crates/platform",
    "crates/starstd",
    "crates/changes",
    "crates/environment",
    "crates/lock",
    "crates/logger",
    "crates/suggest",
    "crates/ws",
    "crates/inputs", "crates/rule",
]

[workspace.dependencies]
anyhow-source-location = { git = "https://github.com/work-spaces/anyhow-source-location", rev = "v0.1.0" }
anyhow = "1"
printer = { git = "https://github.com/work-spaces/printer-rs", rev = "v0.1.4" }
easy-archiver = { git = "https://github.com/work-spaces/easy-archiver", rev = "v0.1.2", features = [
    "printer",
] }
starlark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state = "0.6"
petgraph = "0.6"
glob-match = "0.2"
url = "2"
toml = "0.8"
serde_yaml = "0.9"

changes.path = "crates/changes"
environment.path = "crates/environment"
git.path = "crates/git"
graph.path = "crates/graph"
http-archive.path = "crates/http-archive"
inputs.path = "crates/inputs"
lock.path = "crates/lock"
logger.path = "crates/logger"
platform.path = "crates/platform"
rule.path = "crates/rule"
starstd.path = "crates/starstd"
suggest.path = "crates/suggest"
ws.path = "crates/ws"

[profile.dev]
opt-level = 3
lto = false
debug = true
strip = false
codegen-units = 16

[profile.release]
opt-level = "z"
lto = true
debug = false
panic = "abort"
strip = true
codegen-units = 1
