[workspace]
resolver = "2"
members = [
    "crates/spaces",
    "crates/starstd",
    "crates/spaces-utils",
]

[workspace.dependencies]
anyhow-source-location = "0.2.1"
anyhow = "1"
printer = { package = "spaces-printer", version = "0.3.3" }
archiver = { package = "spaces-archiver", version = "0.3", features = [
    "printer",
] }
starlark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
state = "0.6"
petgraph = "0.8"
glob-match = "0.2"
url = "2"
toml = "0.9"
serde_yaml = "0.9"
strum = { version = "0.26", features = ["derive"] }

utils = { path = "crates/spaces-utils", package = "spaces-utils" }
starstd.path = "crates/starstd"


[profile.dev]
opt-level = 3
lto = false
debug = true
strip = false
codegen-units = 16

[profile.release]
opt-level = "z"
lto = true
debug = false
panic = "abort"
strip = true
codegen-units = 1
