[package]
name = "git"
version = "0.9.0"
edition = "2021"


[dependencies]
semver = "1"
clap = { version = "4", features = ["derive"] }

anyhow-source-location.workspace = true
anyhow.workspace = true
printer.workspace = true
state.workspace = true
serde.workspace = true
lock.workspace = true
logger.workspace = true
strum.workspace = true
url.workspace = true
ws.workspace = true
