[package]
name = "http-archive"
version = "0.9.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
which = "7"

anyhow-source-location.workspace = true
changes.workspace = true
anyhow.workspace = true
printer.workspace = true
state.workspace = true
serde.workspace = true
serde_json.workspace = true
easy-archiver.workspace = true
glob-match.workspace = true
url.workspace = true
logger.workspace = true
ws.workspace = true