[package]
name = "spaces-console"
version = "0.1.1"
edition = "2024"

[dependencies]
superconsole = { git = "https://github.com/facebookincubator/superconsole", rev = "008c8068f980a110341887db4b74dff54650b8a7"}
strum = { version = "0.26", features = ["derive"] }
crossterm = { version = "0.28" }
clap = { version = "4", features = ["derive"] }

serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
anyhow-source-location.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
