[package]
name = "spaces-console"
version = "0.1.1"
edition = "2024"

[dependencies]
superconsole = { git = "https://github.com/facebookincubator/superconsole", rev = "cb168fc24ad6155cc91a96d6af5e8d5e3aeeb30c"}
strum = { version = "0.26", features = ["derive"] }
crossterm = { version = "0.29" }
clap = { version = "4", features = ["derive"] }

serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
anyhow-source-location.workspace = true


[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
