[package]
name = "spaces-console"
version = "0.1.1"
edition = "2024"

[dependencies]
superconsole = { git = "https://github.com/facebookincubator/superconsole", rev = "cb168fc24ad6155cc91a96d6af5e8d5e3aeeb30c"}
termwiz = { git = "https://github.com/wezterm/wezterm.git", rev = "05343b387085842b434d267f91b6b0ec157e4331", default-features = false }
strum = { version = "0.26", features = ["derive"] }
crossterm = { version = "0.29" }
clap = { version = "4", features = ["derive"] }

serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
anyhow-source-location.workspace = true


[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
