[package]
name = "spaces"
version = "0.15.10"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4" }
once_cell = "1"
anyhow = "1"
anyhow-source-location.workspace = true

starlark_syntax = { version = "0.13", optional = true }
starlark_lsp = { version = "0.13", optional = true }
lsp-server = { version = "0.7", optional = true }
itertools = { version = "0.14", optional = true }
lsp-types = { version = "0.97", optional = true }
thiserror = "2"
libc = { version = "0.2", optional = true }

copy.workspace = true
changes.workspace = true
archiver.workspace = true
environment.workspace = true
git.workspace = true
glob-match.workspace = true
graph.workspace = true
http-archive.workspace = true
inputs.workspace = true
lock.workspace = true
logger.workspace = true
petgraph.workspace = true
platform.workspace = true
printer.workspace = true
rule.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
shell.workspace = true
starlark.workspace = true
starstd.workspace = true
state.workspace = true
store.workspace = true
strum.workspace = true
toml.workspace = true
url.workspace = true
workflows.workspace = true
ws.workspace = true

semver = "1"
num_cpus = "1"
home = "0.5"
sha256 = "1"
chrono = "0.4"
blake3 = "1"
bincode = { version = "2", features = ["derive"] }
fs2 = "0.4"

which = "7"
json_value_merge = "2"
regex = "1"
flume = "0.11"
cfg-if = "1"
walkdir = "2"
globwalk = "0.9"
maplit = "1"

[features]
lsp = [
    "itertools",
    "starlark_syntax",
    "starlark_lsp",
    "lsp-server",
    "lsp-types",
    "libc",
]
