[package]
name = "spaces"
version = "0.15.16"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4" }
once_cell = "1"
anyhow = "1"
signal-hook = "0.3"
anyhow-source-location.workspace = true

starlark_syntax = { version = "0.13", optional = true }
starlark_lsp = { version = "0.13", optional = true }
lsp-server = { version = "0.7", optional = true }
itertools = { version = "0.14", optional = true }
lsp-types = { version = "0.97", optional = true }
thiserror = "2"
libc = { version = "0.2", optional = true }

utils.workspace = true
archiver.workspace = true
glob-match.workspace = true
petgraph.workspace = true
printer.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
starlark.workspace = true
starstd.workspace = true
state.workspace = true
strum.workspace = true
toml.workspace = true
url.workspace = true

semver = "1"
num_cpus = "1"
home = "0.5"
sha256 = "1"
chrono = "0.4"
blake3 = "1"
bincode = { version = "2", features = ["derive"] }
fs2 = "0.4"

which = "7"
json_value_merge = "2"
regex = "1"
flume = "0.11"
cfg-if = "1"
walkdir = "2"
globwalk = "0.9"
maplit = "1"

[features]
lsp = [
    "itertools",
    "starlark_syntax",
    "starlark_lsp",
    "lsp-server",
    "lsp-types",
    "libc",
]
