[package]
name = "starstd"
version = "0.7.0"
edition = "2021"


[dependencies]

sha256 = "1"

starlark.workspace = true
anyhow-source-location.workspace = true
anyhow.workspace = true
platform.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
state.workspace = true
