[package]
name = "starstd"
version = "0.8.0"
edition = "2024"


[dependencies]

sha256 = "1"

starlark.workspace = true
anyhow-source-location.workspace = true
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
state.workspace = true
