[package]
name = "ws"
version = "0.14.3"
edition = "2021"

[dependencies]
homedir = "0.3"
semver = "1"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
blake3 = "1"

printer.workspace = true
changes.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
anyhow-source-location.workspace = true