[package]
name = "ws"
version = "0.14.8"
edition = "2021"

[dependencies]
homedir = "0.3"
semver = "1"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
blake3 = "1"

anyhow-source-location.workspace = true
anyhow.workspace = true
changes.workspace = true
environment.workspace = true
inputs.workspace = true
printer.workspace = true
serde_json.workspace = true
serde.workspace = true